test/integration/ingress/manifests/basic/foreign_controller/http-echo-foreign.yaml
kind: Service
apiVersion: v1
metadata:
  name: http-echo-foreign
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8888
  selector:
    app: http-echo-foreign
