test/integration/ingress/manifests/basic/foreign_controller/http-echo.yaml
kind: Service
apiVersion: v1
metadata:
  name: http-echo
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8888
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  selector:
    app: http-echo
