test/integration/ingress/manifests/basic/foreign_controller/ingressclass-foreign.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: foreign
spec:
  controller: example.com/other-ingress-controller
